# nocturne

./: .gitignore  Containerfile  anyscale_job.yaml  requirements-anyscale.txt  setup.py  vec_env_backup.py
algos/ppo/: env_wrappers.py
algos/ppo/utils/: multi_discrete.py
cfgs/: config.py  config.yaml
cfgs/algorithm/: APPO.yaml
cfgs/drl_collision_avoidance/: config.yaml  crl_config.yaml  crl_config_depth16.yaml  crl_config_depth256.yaml  crl_config_depth4.yaml  crl_config_depth64.yaml
examples/: create_env.py
examples/drl_collision_avoidance/: agent_utils.py  collision_avoidance_env.py  crl_collision_avoidance_env.py  ddqn_agent.py  evaluate.py  scenario_utils.py  test_regressions.py  test_smoke.py  train.py  train_crl.py  vec_env.py  visualize.py
examples/drl_collision_avoidance/crl_modules/: __init__.py  actor.py  crl_agent.py  encoders.py  her_buffer.py
examples/drl_collision_avoidance/dqn_modules/: __init__.py  ddqn_agent.py  muon_optimizer.py  noisy_layer.py  optimizers.py  profiling.py  q_network.py  replay_buffer.py  sum_tree.py
examples/sample_factory_files/: run_sample_factory.py  visualize_sample_factory.py
nocturne/: CMakeLists.txt  __init__.py
nocturne/cpp/: CMakeLists.txt
nocturne/envs/: base_env.py  wrappers.py
nocturne/pybind11/src/: scenario.cc
tests/: test_rl_env.py  valid_files.json
